--- a/package.json
+++ b/package.json
@@ -3,25 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spronn/analytics.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/spronn/analytics/issues"
+  },
+  "homepage": "https://github.com/spronn/analytics#readme",
   "dependencies": {
-    "@prisma/client": "^4.1.0",
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@prisma/client": "^3.11.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
+    "form-data": "^4.0.0",
+    "googleapis": "^100.0.0",
+    "jquery": "^3.6.0",
+    "next": "^12.1.6",
+    "popper.js": "^1.16.1",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3"
   },
   "devDependencies": {
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
-    "prisma": "^4.1.0",
-    "typescript": "4.7.4"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.39",
+    "@types/react": "^18.0.10",
+    "autoprefixer": "^10.4.7",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.14",
+    "prettier": "2.6.2",
+    "prisma": "^3.12.0",
+    "typescript": "^4.7.2"
   }
 }
