--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mysql://root@127.0.0.1:3309/portalga4
-SHADOW_DATABASE_URL=mysql://root@127.0.0.1:3310/portalga4
+DATABASE_URL='mysql://4d6b8veysay6:pscale_pw_BAK_e10oiG0UlsWCLNLsZakWbTQCJ5xOYJWfgNH757o@7gocduys6jt0.us-east-4.psdb.cloud/portalga4?sslaccept=strict'
