--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portalga4",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -23,7 +24,7 @@
   "dependencies": {
     "@prisma/client": "^3.11.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.1.3",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "form-data": "^4.0.0",
