--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/spronn/analytics#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@prisma/client": "^3.12.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -31,7 +32,6 @@
     "googleapis": "^100.0.0",
     "jquery": "^3.6.0",
     "next": "^12.1.6",
-    "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
