--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://4d6b8veysay6:pscale_pw_BAK_e10oiG0UlsWCLNLsZakWbTQCJ5xOYJWfgNH757o@7gocduys6jt0.us-east-4.psdb.cloud/portalga4?sslaccept=strict'
+DATABASE_URL='mysql://mn674t3afxkt:pscale_pw_-sg-1Q5GT3Nkudo8PYubF1hLU-hJH3ADeGKGIGtABwM@7gocduys6jt0.us-east-4.psdb.cloud/portalga4?sslaccept=strict'
