--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/spronn/analytics#readme",
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.1",
     "@popperjs/core": "^2.11.5",
     "@prisma/client": "^3.12.0",
     "axios": "^0.27.2",
