--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=mysql://root@127.0.0.1:3309/portalga4
+
+
+DATABASE_URL='mysql://kq7k66vm4blt:pscale_pw_at0r3K3ebTcC9e6QdLqnPEp79GeiSWWddviJl-NkqE0@7j7ltoa0hd9g.us-east-3.psdb.cloud/portalga4?sslaccept=strict'
 
 
 
