--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 
 
-DATABASE_URL='mysql://kq7k66vm4blt:pscale_pw_at0r3K3ebTcC9e6QdLqnPEp79GeiSWWddviJl-NkqE0@7j7ltoa0hd9g.us-east-3.psdb.cloud/portalga4?sslaccept=strict'
+DATABASE_URL='mysql://d4crh59erlrq0v7zr93v:pscale_pw_FQA63KWMkSsxqY8rwLf6cYgBEvARr2J2oJbSXC5L3eg@us-east.connect.psdb.cloud/portalga4?sslaccept=strict'
 
 
 
