--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^17.0.39",
     "@types/react": "^18.0.10",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.27.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.14",
     "prettier": "2.6.2",
