--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "googleapis": "^100.0.0",
     "jquery": "^3.6.0",
     "next": "^12.1.6",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.3",
-    "uuid": "^8.3.2"
+    "redux": "^5.0.0",
+    "uuid": "^8.3.2",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
